2005-07-13  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Make rt_task_delete() syscall conforming.

	* skins/posix/syscall.c (__sem_trywait, __sem_getvalue): Add
	missing calls.

2005-07-11  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_send_sig): Sends a signal to the
	Linux task mated to a given real-time shadow.

	* arch/i386/patches: Upgrade to r12c4.

2005-07-11  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* GNUmakefile.am (devices): If not root, try using sudo to install
	devices, if sudo fails, issue a big fat warning and exit.

	* **/*.[ch]: Upgrade comments for Debian sarge version of
	doxygen. "fn" tag arguments need to be put on one line.

	* README.INSTALL, autotools-files: upgrade to Debian sarge
	versions of the auto-tools.

	* configure.in, arch/GNUmakefile.am: Remove the recursion into the
	"generic" directory, autoconf knows about the generic/generic.c
	file through configure.in and generates correct rules in the top
	GNUmakefile.

	* configure.in, sim/configure.in, doc/doxygen/Doxyfile.in: Move
	rtai_config.h.in in the include directory to avoid recursing in
	the whole sim directory when building documentation and solve the
	conflict between the simultator and doxygen documentation options.

2005-07-10  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/rtai/timer.c (rt_timer_ticks2ns, rt_timer_ns2ticks):
	Change behaviour with regard to timer mode. Calling 
	rt_task_sleep(rt_timer_ns2ticks(ns)) will sleep ns nanoseconds
	whatever the timer mode.

	(rt_timer_ns2tsc, rt_timer_tsc2ns): Add these two new functions to
	get the behaviour rt_timer_ticks2ns and rt_timer_ns2ticks
	previously had when timer was in aperiodic mode.

	* skin/posix/lib/cond.c skins/posix/cond.c 
	(pse51_cond_timedwait_internal): Allow EINTR to be returned to
	user-space wrappers.
	(pthread_cond_*wait): Do not return EINTR to applications.

	* skins/posix/thread.c (pthread_join): Do not return EINTR,